<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <!-- Terminal -->
    <ListView
        android:id="@+id/list_of_text_terminal_secondActivity"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:focusableInTouchMode="false"
        android:isScrollContainer="false"
        android:stackFromBottom="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Video -->
    <com.longdo.mjpegviewer.MjpegView
        android:id="@+id/mjpegview"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_of_text_terminal_secondActivity"
        tools:ignore="MissingConstraints" />

    <!-- button Video on -->
    <Button
        android:id="@+id/btn_video_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/btn_video_on"
        app:layout_constraintBottom_toTopOf="@+id/text_result_manipulation_platform"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- button Video off -->
    <Button
        android:id="@+id/btn_video_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/btn_video_off"
        app:layout_constraintBottom_toTopOf="@+id/text_result_manipulation_platform"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- result text manipulator -->
    <TextView
        android:id="@+id/text_result_manipulation_platform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/text_manipulator_platform"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/inputManipulation_q3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- buttons manipulator -->
    <EditText
        android:id="@+id/inputManipulation_q2"
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toTopOf="@+id/btn_send_Manipulator"
        app:layout_constraintStart_toEndOf="@+id/textView12" />

    <EditText
        android:id="@+id/inputManipulation_q3"
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toTopOf="@+id/inputManipulation_q4"
        app:layout_constraintStart_toEndOf="@+id/textView" />

    <EditText
        android:id="@+id/inputManipulation_q4"
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toTopOf="@+id/inputManipulation_q5"
        app:layout_constraintStart_toEndOf="@+id/textView8" />

    <EditText
        android:id="@+id/inputManipulation_q5"
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toTopOf="@+id/btn_send_Manipulator"
        app:layout_constraintStart_toEndOf="@+id/textView9" />

    <EditText
        android:id="@+id/inputManipulation_q1"
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toTopOf="@+id/inputManipulation_q2"
        app:layout_constraintStart_toEndOf="@+id/textView11" />

    <EditText
        android:id="@+id/inputManipulation_id"
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toTopOf="@+id/inputManipulation_q1"
        app:layout_constraintStart_toEndOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="5dp"
        android:text="@string/text_q3"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/inputManipulation_q4"
        app:layout_constraintStart_toEndOf="@+id/inputManipulation_id" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="5dp"
        android:text="@string/text_q4"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/inputManipulation_q5"
        app:layout_constraintStart_toEndOf="@+id/inputManipulation_q1" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="21dp"
        android:text="@string/text_q5"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_send_Manipulator"
        app:layout_constraintStart_toEndOf="@+id/inputManipulation_q2" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/text_id"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/inputManipulation_q1"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/text_q1"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/inputManipulation_q2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="21dp"
        android:text="@string/text_q2"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_send_Manipulator"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- button send manipulator -->
    <Button
        android:id="@+id/btn_send_Manipulator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/text_send_command"
        app:layout_constraintBottom_toTopOf="@+id/btn_goHomeActivity"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- buttons move -->
    <ImageButton
        android:id="@+id/i_btn_goBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="60dp"
        android:rotation="270"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/btn_goHomeActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/arrow" />

    <ImageButton
        android:id="@+id/i_btn_goLeft"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="50dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/i_btn_goBack"
        app:layout_constraintEnd_toStartOf="@+id/i_btn_goRight"
        app:srcCompat="@drawable/arrow" />

    <ImageButton
        android:id="@+id/i_btn_goRight"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:rotation="180"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/i_btn_goBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/arrow" />

    <!-- кнопка для движения робота ВПЕРЕД -->
    <ImageButton
        android:id="@+id/i_btn_goForward"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="60dp"
        android:rotation="90"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/i_btn_goRight"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/arrow" />

    <ImageButton
        android:id="@+id/i_btn_goTurnLeft"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="5dp"
        android:rotation="45"
        android:rotationY="180"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/i_btn_goTurnRight"
        app:srcCompat="@drawable/arrowturn" />

    <ImageButton
        android:id="@+id/i_btn_goTurnRight"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:rotation="45"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/arrowturn" />

    <!-- button go MainActivity -->
    <Button
        android:id="@+id/btn_goHomeActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="5dp"
        android:onClick="goHomeActivity"
        android:text="@string/button_home_activity"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- button go ThirdActivity -->
    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="5dp"
        android:onClick="goThirdActivity"
        android:text="@string/text_next_activity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_goHomeActivity" />

</androidx.constraintlayout.widget.ConstraintLayout>